--- a/teeda-buri-app/study-buri/src/main/webapp/view/item/itemSelect.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/item/itemSelect.html
@@ -28,6 +28,9 @@
 					<td width="120" align="left">
 						<span id="price">99999</span>
 					</td>
+					<td width="100">
+						<span id="itemId">99999</span>
+					</td>
 					<td>
 						<input type="hidden" id="itemId"/>
 					</td>
