Tigerアノテーション対応
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@205 1c266114-290a-0410-b1ce-a63319e86887

--- a/teeda-buri-app/study-buri/src/main/webapp/view/layout/menu.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/layout/menu.html
@@ -4,7 +4,10 @@
 <title>ぶりサンプルメニュー(OrderBao.xpdl)</title>
 </head>
 <body>
-	<h4>OrderBao.xpdl)</h4>
+	<h4>Index</h4>
+	<ul>
+		<li><a href="../index/index.html">TOP</a></li>
+	</ul>
 	<h4>注文処理(OrderBao)</h4>
 	<ul>
 		<li><a href="../customer/customerSelect.html">order</a></li>
