--- a/teeda-buri-app/study-buri/src/main/webapp/view/layout/layout.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/layout/layout.html
@@ -1,7 +1,7 @@
 <html xmlns:te="http://www.seasar.org/teeda/extension">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>ぶりサンプルメニュー</title>
+<title><span id="title">メニュー</span></title>
 <link rel="stylesheet" type="text/css" href="../../css/global.css"/>
 </head>
 <body>
