サンプル修正 WARファイルのデプロイで動作確認(tomcat5.5.23)
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@215 1c266114-290a-0410-b1ce-a63319e86887

--- a/teeda-buri-app/study-buri/src/main/webapp/view/bill/getReBill.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/bill/getReBill.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<title id="title">Dummy</title>
+<title id="title">再請求準備分</title>
 </head>
 <body>
 <script type="text/javascript">
