--- a/teeda-buri-app/study-buri/src/main/webapp/view/bill/getEndBill.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/bill/getEndBill.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<title id="title">Dummy</title>
+<title id="title">請求処理終了分</title>
 </head>
 <body>
 	<h3 class="subTitle">請求処理終了分</h3>
