buriのバージョン番号更新
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@223 1c266114-290a-0410-b1ce-a63319e86887

--- a/teeda-buri-app/study-buri/src/main/webapp/view/layout/layout.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/layout/layout.html
@@ -1,7 +1,7 @@
 <html xmlns:te="http://www.seasar.org/teeda/extension">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title><span id="title">メニュー</span></title>
+<title>メニュー</title>
 <link rel="stylesheet" type="text/css" href="../../css/global.css"/>
 </head>
 <body>
