FireFoxでのID取得修正、StackTraceの出力対応とそのためのTeedaバージョンアップ まこたんさん・スタロジの方修正方法ありがとうございますm(_ _)m
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@243 1c266114-290a-0410-b1ce-a63319e86887

--- a/teeda-buri-app/study-buri/src/main/webapp/view/bill/getBillWating.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/bill/getBillWating.html
@@ -7,7 +7,8 @@
 <script type="text/javascript">
 function setIndex(name) {
   var hidden = name.substring(0, name.lastIndexOf(':'));
-  var f = document.billForm;
+  //var f = document.billForm;
+  var f = document.getElementById('billForm');
   f.clickBillId.value = f[hidden + ':billId'].value;
   alert("請求ID:=" + f.clickBillId.value)
 }
