--- a/teeda-buri-app/study-buri/src/main/webapp/view/error/errorResult.html
+++ b/teeda-buri-app/study-buri/src/main/webapp/view/error/errorResult.html
@@ -1,11 +1,12 @@
-<html>
+<html xmlns:te="http://www.seasar.org/teeda/extension">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>error result</title>
+<title>Teeda Error Page</title>
 </head>
 <body>
 <form id="errorForm">
 <span id="allMessages"></span><br/>
+<span id="stackTrace" te:escape="false"></span><br/>
 error result page.
 </form>
 </body>
